--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,15 +1,15 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div><a href="https://www.github.com/Gustavo59" class="navbar-brand">GitHub</a></div>
+        <div><a href="https://letterboxd.com/Tiozao59/" class="navbar-brand">Letterboxd</a></div>
 
         <ul class="navbar-nav">
-            <li><a href="/welcome/gsbarros" class="nav-link">Home</a></li>
-            <li><a href="/todos" class="nav-link">Todos</a></li>
+            <li><a routerLink="/welcome/gsbarros" class="nav-link">Home</a></li>
+            <li><a routerLink="/towatch" class="nav-link">ToWatch</a></li>
         </ul>
 
         <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li><a href="/login" class="nav-link">Login</a></li>
-            <li><a href="/logout" class="nav-link">Logout</a></li>
+            <li><a routerLink="/login" class="nav-link">Login</a></li>
+            <li><a routerLink="/logout" class="nav-link">Logout</a></li>
         </ul>
     </nav>
 </header>
