--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <h1>Welcome!</h1>
 
 <div class="container">
-    Welcome {{name}}. You can manage your todos <a routerLink="/todos">here</a>
+    Welcome {{name}}. You can manage your movies to watch <a routerLink="/todos">here</a>
 </div>
