--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,13 +3,17 @@
         <div><a href="https://letterboxd.com/Tiozao59/" class="navbar-brand">Letterboxd</a></div>
 
         <ul class="navbar-nav">
-            <li><a routerLink="/welcome/gsbarros" class="nav-link">Home</a></li>
-            <li><a routerLink="/towatch" class="nav-link">ToWatch</a></li>
+            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/welcome/gsbarros"
+                    class="nav-link">Home</a></li>
+            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/towatch"
+                    class="nav-link">ToWatch</a></li>
         </ul>
 
         <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li><a routerLink="/login" class="nav-link">Login</a></li>
-            <li><a routerLink="/logout" class="nav-link">Logout</a></li>
+            <li><a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/login"
+                    class="nav-link">Login</a></li>
+            <li><a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/logout"
+                    class="nav-link">Logout</a></li>
         </ul>
     </nav>
 </header>
