--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container">
-        <span class="text-muted">Rights Reserved 2020 @Gustavo59</span>
+        <span class="text-muted">All Rights Reserved 2020 @Gustavo59</span>
     </div>
 </footer>
